@@ -53,6 +53,11 @@ class TimeStampTests(unittest.TestCase):
         self.assertEqual(ts.second(), 0.0)
         self.assertEqual(ts.timeTime(), DELTA_SECS)
 
+    def test_ctor_from_string_non_zero(self):
+        before = self._makeOne(2011, 2, 16, 14, 37, 22.0)
+        after = self._makeOne(before.raw())
+        self.assertEqual(before._elements, after._elements)
+
     def test_ctor_from_elements(self):
         from persistent.timestamp import _makeOctets
         from persistent.timestamp import _makeUTC
